--- a/packages/plugin/playground/vite/package.json
+++ b/packages/plugin/playground/vite/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "demo",
+  "name": "vite",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,16 +11,10 @@
   "dependencies": {
     "@module-federation/enhanced": "^0.7.3",
     "@module-federation/vite": "^1.1.6",
-    "@vueuse/core": "^11.2.0",
-    "@vueuse/integrations": "^11.2.0",
-    "universal-cookie": "^7",
-    "vue": "^3.5.13"
+    "vue": "^3.5.12"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.15",
     "typescript": "~5.6.2",
     "vite": "^5.4.10",
     "vue-tsc": "^2.1.8"
