--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -14,6 +14,7 @@
     "@vueuse/core": "^11.2.0",
     "@vueuse/integrations": "^11.2.0",
     "universal-cookie": "^7",
+    "vite-plugin-top-level-await": "^1.4.4",
     "vue": "^3.5.13"
   },
   "devDependencies": {
