feat(plugin): add Toast component and playground script

--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "playground": "cd playground/vite && pnpm dev",
     "build": "vite build",
     "preview": "vite preview"
   },
