--- a/packages/server/public/plugin/.vite/manifest.json
+++ b/packages/server/public/plugin/.vite/manifest.json
@@ -1,6 +1,6 @@
 {
   "node_modules/__mf__virtual/core__H_A_I__hostAutoInit__H_A_I__.js": {
-    "file": "hostInit-BvAqS5Jq.js",
+    "file": "hostInit-Boe8nKic.js",
     "name": "hostInit",
     "src": "node_modules/__mf__virtual/core__H_A_I__hostAutoInit__H_A_I__.js",
     "isEntry": true,
@@ -9,14 +9,14 @@
     ]
   },
   "src/init.ts": {
-    "file": "demo.js",
+    "file": "stage-entry-plugin.js",
     "name": "init",
     "src": "src/init.ts",
     "isEntry": true,
     "isDynamicEntry": true
   },
   "virtual:mf-REMOTE_ENTRY_ID": {
-    "file": "remoteEntry-DOT9Folx.js",
+    "file": "remoteEntry-CBblo6_b.js",
     "name": "remoteEntry",
     "src": "virtual:mf-REMOTE_ENTRY_ID",
     "isEntry": true,
@@ -25,7 +25,7 @@
     ]
   },
   "virtual:mf-exposes": {
-    "file": "virtualExposes-BOht1keI.js",
+    "file": "virtualExposes-B9F3X73t.js",
     "name": "virtualExposes",
     "src": "virtual:mf-exposes",
     "isEntry": true,
