fix(server): baseUrl

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:plugin": "pnpm -C packages/plugin build",
     "tag:server": "cd packages/server && bumpp --tag server@ --commit --push",
     "tag:plugin": "cd packages/plugin && bumpp --no-commit --no-tag",
-    "release:server": "pnpm build:plugin && pnpm tag:server",
+    "release:server": "pnpm tag:server",
     "gen:plugin": "pnpm build:plugin && pnpm tag:plugin"
   },
   "keywords": [],
