--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sepveneto/stage-entry",
-  "version": "0.1.2-beta.1",
+  "version": "0.1.2",
   "private": true,
   "type": "module",
   "scripts": {
